syntax = "proto3";
package zetachain.zetacore.observer;

import "gogoproto/gogo.proto";
import "zetachain/zetacore/observer/observer.proto";
import "zetachain/zetacore/pkg/chains/chains.proto";

option go_package = "github.com/zeta-chain/zetacore/x/observer/types";

message ChainParamsList { repeated ChainParams chain_params = 1; }

message ChainParams {
  int64 chain_id = 11;
  uint64 confirmation_count = 1;
  uint64 gas_price_ticker = 2;
  uint64 inbound_ticker = 3;
  uint64 outbound_ticker = 4;
  uint64 watch_utxo_ticker = 5;
  string zeta_token_contract_address = 8;
  string connector_contract_address = 9;
  string erc20_custody_contract_address = 10;
  int64 outbound_schedule_interval = 12;
  int64 outbound_schedule_lookahead = 13;
  string ballot_threshold = 14 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string min_observer_delegation = 15 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  bool is_supported = 16;
}

// Deprecated(v13): Use ChainParamsList
message ObserverParams {
  pkg.chains.Chain chain = 1;
  string ballot_threshold = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string min_observer_delegation = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  bool is_supported = 5;
}

// Deprecated(v14):Moved into the authority module
enum Policy_Type {
  option (gogoproto.goproto_enum_stringer) = true;
  group1 = 0;
  group2 = 1;
}

// Deprecated(v14):Moved into the authority module
message Admin_Policy {
  Policy_Type policy_type = 1;
  string address = 2;
}

// Deprecated
message Params {
  // Deprecated(v13): Use ChainParamsList
  repeated ObserverParams observer_params = 1;

  // Deprecated(v14):Moved into the authority module
  repeated Admin_Policy admin_policy = 2;

  // Deprecated(v17):Moved into the emissions module
  int64 ballot_maturity_blocks = 3;
}